<resources>
    <string name="app_name">BakeMe</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="overview_of_method_label">Overview of method:</string>
    <string name="go_to_step_iv">go to step</string>
    <string name="thumbnail_of_video">Thumbnail of video</string>
    <string name="tablet_tag">sw600dp</string>
    <string name="favourite_menu">Favourite</string>

    <!-- Exoplayer-->
    <string name="prev_button_contDescrip">Media player previous button</string>
    <string name="play_button_contDescrip">Media player play button</string>
    <string name="pause_button_contDescrip">Media player pause button</string>
    <string name="navigate_back"><![CDATA[<<]]></string>
    <string name="navigate_forward"><![CDATA[>>]]></string>

    <!--Content Descriptions -->
    <string name="navigate_forward_contDescrip">navigate to next step</string>
    <string name="navigate_back_contDescrip">Navigate back</string>
    <string name="recipe_card_image_contDescrip">Recipe card image</string>
    <string name="widget_title_contenDescrip">BakeMe app, shopping list widget</string>
    <string name="favourited_recipe">favouriteFlag recipe</string>
    <string name="separator_widget_contentDescrip">list separator</string>
    <string name="bakeground_widget_contDescrip">BakeMe app icon in the background.</string>

    <!-- toasts and other messages -->
    <string name="landscape_instruction"> &lt; previous step | swipe right &gt;</string>
    <string name="swiper_no_prev_toast">This is the first step for this recipe.</string>
    <string name="swiper_last_step_toast">This is the last step of this recipe.</string>
    <string name="no_internet">There is currently not internet connection.</string>
    <string name="no_detail_step_available">No details have been provided for this step.</string>
    <string name="favourite_snack_message">Select the ingredients for your shopping list.</string>
    <string name="favourite_info_dialog">You can select ingredients by ticking their checkboxes, which will then be displayed as a shopping list in the BakeMe widget. As you shop for your ingredients you can the remove each ingredient from the list once acquired by tapping them.</string>
    <string name="favourite_title_dialog">Time to go shopping</string>
    <string name="ok">OK</string>
    <string name="widget_all_available">You have all ingredients to make your  favourited recipe(s)!</string>
    <string name="widget_no_recipes">You have not favourited any Recipes for your shopping list.</string>

    <!-- tags for intents, bundles and persistence -->
    <string name="INGREDIENT_LIST" translatable="false">ingredient list</string>
    <string name="STEP_LIST" translatable="false">step list</string>
    <string name="RECIPE_BUNDLE" translatable="false">recipe bundle</string>
    <string name="SELECTED_STEP" translatable="false">selected step</string>
    <string name="SELECTED_RECIPE" translatable="false">selected_recipe</string>
    <string name="RECIPE_KEY" translatable="false">recipe_key</string>
    <string name="no_recipes">There are no recipe to be displayed.</string>
    <string name="ingredient_indicator">ingredients for</string>
    <string name="steps_indicator">steps for</string>
    <string name="associated_recipe">associatedRecipe</string>
    <string name="favourite_button">favourite button</string>
    <string name="unknown_uri">Unknown URI:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredient_acquired">ingredient acquired</string>
    <string name="widget_title">Shopping list for BakeMe</string>
    <string name="recipe_card_favourite_button">Recipe card favourite button</string>
    <string name="recipe_overview_favourite_button">Recipe overview favourite button</string>
</resources>