<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/floured_bench"
    tools:context="com.example.android.bakeme.ui.MainActivity">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/recipe_step_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/video_thumbnail_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/ic_launcher_background"
        android:contentDescription="@string/thumbnail_of_video"
        app:layout_constraintBottom_toBottomOf="@+id/exo_play"

        app:layout_constraintEnd_toEndOf="@+id/exo_play"
        app:layout_constraintStart_toStartOf="@+id/exo_play"
        app:layout_constraintTop_toTopOf="@+id/exo_play"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/recipe_step_tv"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_prev_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:text="detailed recipe step is displayed here." />

    <ImageButton
        android:id="@+id/nav_prev_bt"
        style="@style/navigationButtons"
        android:layout_width="0dp"
        android:contentDescription="@string/navigate_back_contDescrip"
        android:src="@drawable/arrow_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nav_next_bt"
        style="@style/navigationButtons"
        android:layout_width="0dp"
        android:contentDescription="@string/navigate_forward_contDescrip"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>